// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a mock Content Relationship field model 1`] = `
[
  {
    "config": {
      "customtypes": undefined,
      "label": "Feugiat",
      "placeholder": "Rhoncus dolor purus",
      "select": "document",
      "tags": undefined,
    },
    "type": "Link",
  },
  {
    "config": {
      "customtypes": undefined,
      "label": "Feugiat",
      "placeholder": "Rhoncus dolor purus",
      "select": "document",
      "tags": undefined,
    },
    "type": "Link",
  },
]
`;

exports[`supports number seed 1`] = `
[
  {
    "config": {
      "customtypes": undefined,
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
      "select": "document",
      "tags": undefined,
    },
    "type": "Link",
  },
  {
    "config": {
      "customtypes": undefined,
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
      "select": "document",
      "tags": undefined,
    },
    "type": "Link",
  },
]
`;
